syntax = "proto3";

option java_multiple_files = true;
package com.dolmengi.grpc.service;

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}

service Greeter {
	rpc SayHello (HelloRequest) returns (HelloReply) {}
}
